css/style.css
/* ... */
.grax_tm_news .news_list ul li .details .title a:hover {
	color: #e54b4b;
}

.grax_tm_news .news_list ul li .details .date {
	text-transform: uppercase;
	font-family: "Poppins";
	font-size: 12px;
	color: #767676;
	font-style: italic;
}

.grax_tm_news .news_list ul li .details .date a {
	text-decoration: none;
	color: #767676;

	-webkit-transition: all .3s ease;
	-moz-transition: all .3s ease;
	-ms-transition: all .3s ease;
	-o-transition: all .3s ease;
	transition: all .3s ease;
}

.grax_tm_news .news_list ul li .details .date a:hover {
	color: #e54b4b;
}

.grax_tm_news .news_list ul li .details .date span {
	position: relative;
	margin-left: 11px;
}

.grax_tm_news .news_list ul li .details .date span:before {
	position: absolute;
	content: "";
	margin-top: 1px;
	top: 50%;
	transform: translateY(-50%) rotate(15deg);
	right: 100%;
	background-color: #939393;
	width: 1px;
	height: 9px;
	margin-right: 7px;
}

.grax_tm_news .description {
	opacity: 0;
	visibility: hidden;
	position: absolute;
	z-index: -11;
	display: none;
}

body.modal {
	overflow-y: hidden;
}

.grax_tm_modalbox_news {
	position: fixed;
	top: 0px;
	left: 0px;
	right: 0px;
	height: 100vh;
	z-index: 15;
	background-color: rgba(0, 0, 0, .8);
	opacity: 0;
	visibility: hidden;
	transition: all .3s ease;
}

.grax_tm_modalbox_news.opened {
	opacity: 1;
	visibility: visible;
}

.grax_tm_modalbox_news .container {
	height: 100vh;
}

.grax_tm_modalbox_news .box_inner {
	position: absolute;
	top: 70px;
	bottom: 70px;
	width: 1200px;
	left: 50%;
	transform: translateX(-50%);
	background-color: #fff;
	z-index: 1;
	opacity: 0;
	visibility: hidden;
	margin-top: -20px;
	transition: all .3s ease;
	transition-delay: .3s;
}

.grax_tm_modalbox_news.opened .box_inner {
	opacity: 1;
	visibility: visible;
	margin-top: 0px;
}

.grax_tm_modalbox_news .close {
	position: fixed;
	left: 100%;
	top: 0px;
	margin-left: 40px;
	z-index: 111111;
}

.grax_tm_modalbox_news .close a {
	text-decoration: none;
	color: #fff;
}

.grax_tm_modalbox_news .close .svg {
	width: 50px;
	height: 50px;
}

.grax_tm_modalbox_news .description_wrap {
	position: relative;
	width: 100%;
	height: 100%;
	float: left;
	overflow: hidden;
	padding: 50px;
}

.grax_tm_modalbox_news .details {
	width: 100%;
	float: left;
	margin-bottom: 30px;
}

.grax_tm_modalbox_news .description {
	width: 100%;
	float: left;
}

.grax_tm_modalbox_news .description p {
	margin-bottom: 15px;
}

.grax_tm_modalbox_news .description blockquote {
	font-style: italic;
	color: #000;
	border-left: 2px solid #e54b4b;
	padding-left: 20px;
	margin-bottom: 15px;
}

.grax_tm_modalbox_news .description_wrap .image {
	position: relative;
	max-height: 450px;
	z-index: -1;
	margin-bottom: 40px;
}

.grax_tm_modalbox_news .description_wrap .image img {
	min-width: 100%;
}

.grax_tm_modalbox_news .description_wrap .image .main {
	position: absolute;
	top: 0px;
	bottom: 0px;
	left: 0px;
	right: 0px;
	background-repeat: no-repeat;
	background-position: center;
	background-size: cover;
	border-radius: 5px;
}

.grax_tm_modalbox_news .details .title {
	font-weight: 600;
	margin-bottom: 5px;
}

.grax_tm_modalbox_news .date {
	text-transform: uppercase;
	font-family: "Poppins";
	font-size: 12px;
	color: #767676;
	font-style: italic;
}

.grax_tm_modalbox_news .date a {
	text-decoration: none;
	color: #767676;

	-webkit-transition: all .3s ease;
	-moz-transition: all .3s ease;
	-ms-transition: all .3s ease;
	-o-transition: all .3s ease;
	transition: all .3s ease;
}

.grax_tm_modalbox_news .date a:hover {
	color: #e54b4b;
}

.grax_tm_modalbox_news .date span {
	position: relative;
	margin-left: 11px;
}

.grax_tm_modalbox_news .date span:before {
	position: absolute;
	content: "";
	margin-top: 0px;
	top: 50%;
	transform: translateY(-50%) rotate(15deg);
	right: 100%;
	background-color: #939393;
	width: 1px;
	height: 9px;
	margin-right: 7px;
}

.grax_tm_modalbox_news .share {
	width: 100%;
	height: auto;
	clear: both;
	display: flex;
	align-items: center;
}

.grax_tm_modalbox_news .share span {
	font-family: "Poppins";
	color: #000;
	font-weight: 600;
	display: inline-block;
	padding-right: 20px;
}

.grax_tm_modalbox_news .share ul {
	margin: 0px;
	list-style-type: none;
}

.grax_tm_modalbox_news .share ul li {
	margin: 0px 10px 0px 0px;
	display: inline-block;
}

.grax_tm_modalbox_news .share ul li a {
	text-decoration: none;
	color: #000;
}













/*---------------------------------------------------*/
/*	09) GRAX CONTACT
/*---------------------------------------------------*/

.grax_tm_contact {
	width: 100%;
	height: auto;
	clear: both;
	float: left;
	position: relative;
	margin-bottom: 110px;
	padding-top: 140px;
}

.grax_tm_contact .contact_inner {
	width: 100%;
	height: auto;
	clear: both;
	display: flex;
	padding-top: 77px;
}

.grax_tm_contact .left {
	width: 50%;
}

.grax_tm_contact .left .text {
	width: 100%;
	float: left;
	margin-bottom: 40px;
}

.grax_tm_contact .info_list {
	width: 100%;
	height: auto;
	clear: both;
	float: left;
}

.grax_tm_contact .info_list ul {
	margin: 0px;
	list-style-type: none;
}

.grax_tm_contact .info_list li {
	margin: 0px 0px 18px 0px;
	float: left;
	width: 100%;
	position: relative;
}

.grax_tm_contact .info_list ul li .list_inner {
	width: 100%;
	height: auto;
	clear: both;
	float: left;
	position: relative;
	padding-left: 27px;
}

.grax_tm_contact .info_list ul li span.first {
	min-width: 100px;
	display: inline-block;
}

.grax_tm_contact .info_list ul li span.second {
	font-weight: 400 !important;
	color: inherit !important;
}

.grax_tm_contact .info_list ul li span {
	font-family: "Poppins";
	font-weight: 600;
	color: #000;
}

.grax_tm_contact .info_list ul li a {
	text-decoration: none;
	color: inherit !important;
	transition: all .3s ease;
	display: inline-block;
	position: relative;
}

.grax_tm_contact .info_list ul li a:hover {
	color: #000;
}
/* ... */

